deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity-validation
  labels:
    name: identity-validation
    app: identity-validation-mx
    environment: production
