deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-validation-api
  namespace: identity-validation
  labels:
    app: identity-validation-mx
    component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: identity-validation-mx
    component: api
